@@ -46,6 +46,7 @@
 - add config option to force use of program map stdvars.
 - fix incorrect check in parse_mount().
 - handle duplicates in multi mounts.
+- revert special case cifs escapes.
 
 04/06/2014 autofs-5.1.0
 =======================
